{
    "name": "MenuControls",
    "maps": [
        {
            "name": "MenuMap",
            "id": "6b6b2b70-ce36-4805-98bf-a43c1592a70a",
            "actions": [
                {
                    "name": "IndicatorUp",
                    "type": "Value",
                    "id": "1e9680ca-5519-4a58-8b10-437a7e08fe8b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "IndicatorDown",
                    "type": "Value",
                    "id": "86e5e488-5490-49aa-95fe-3da2904ad76a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ConfirmIndicated",
                    "type": "Value",
                    "id": "684c66f8-70cc-46f8-8d15-e52985270021",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d420201f-5c38-449e-bb09-da01adaa0a11",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IndicatorUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f06a4a89-587a-4a1d-87aa-07e22060597d",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IndicatorUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3f6e9aa-49b9-462a-8481-66775c16856b",
                    "path": "<Keyboard>/numpad8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IndicatorUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a1f7393-5f23-41ce-b299-945ddb580137",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IndicatorDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "514f81e2-aa7a-4182-9a20-ec57b00b67e8",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IndicatorDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b3e6dd3-14c5-4926-a443-09a0263e9b7f",
                    "path": "<Keyboard>/numpad2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IndicatorDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97ada4fc-efc4-46ad-b426-02a86d2e459c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ConfirmIndicated",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "417dea84-973f-43fa-8a22-c1f756e633fc",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ConfirmIndicated",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}